--- a/Exercicios/desafia012 cordel/estilo/style.css
+++ b/Exercicios/desafia012 cordel/estilo/style.css
@@ -73,7 +73,7 @@ section.normal {
 
 section.imagem{
     background-color: rgba(0, 0, 0, 0.384);
-    color: white;
+    color: rgb(0, 0, 0);
     box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.473);
     background-size: cover;
     background-attachment: fixed;
